--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ body{
     justify-content: space-between;
     padding: 20px 80px;
     background-color: #c1ae97;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    box-shadow: 0px 5px 15px 0px rgba(51, 37, 20, 0.6);
     z-index: 999;
     position: sticky;
     top: 0;
@@ -123,7 +123,7 @@ body{
     right: 0;
 }
 
-/* hero-section section */
+/* hero-section */
 #hero-section{
     background-image: url(./img/hero.jpg);
     height: 90vh;
@@ -628,7 +628,7 @@ footer .copyright{
     }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 655px) {
     #header{
         padding: 20px 30px;
     }
@@ -687,4 +687,93 @@ footer .copyright{
     #news-letter div {
         margin: 40px 40px 20px;
     }
+
+    /* PRODUCT DESC */
+
+    #product-details {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #product-details .product-image {
+        width: 100%;
+        margin-right: 0px;
+    }
+}
+
+/* SHOP PAGE */
+
+#product1 .pro-container{
+    padding-top: 0;
+}
+
+#shop-pagination{
+    text-align: center;
+}
+
+#shop-pagination a{
+    background-color: #14615b;
+    text-decoration: none;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 3px;
+    font-size: 15px;
+}
+
+#shop-pagination a i{
+    font-weight: 600;
+}
+
+/* PRODUCT DESC */
+
+#product-details .product-image{
+    width:30%;
+    margin-right: 40px;
+}
+
+#product-details .small-images{
+    display: flex;
+    justify-content: space-between;
+}
+
+#product-details .small-image{
+    cursor: pointer;
+    flex-basis: 24%;
+}
+
+#product-details{
+    display: flex;
+    margin-top: 60px;
+}
+
+#product-details .product-description{
+    padding-top: 20px;
+    width: 50%;
+}
+
+#product-details .product-description h4{
+    padding: 50px 0 20px 0;
+}
+
+#product-details .product-description h2{
+    font-size: 25px;
+}
+
+#product-details .product-description span{
+    line-height: 28px;
+}
+
+#product-details .product-description input{
+    height: 45px;
+    width: 50px;
+    padding-left: 10px;
+    margin-right: 10px;
+    font-size: 16px;
+    outline: 1px solid #332514;
+    border: none;
+}
+
+#product-details .product-description button{
+    color: white;
+    background-color: #14615b ;
 }
