Used <a> instead of onclick= to redirect from shop.html to product.html

--- a/styles.css
+++ b/styles.css
@@ -241,6 +241,10 @@ body{
 
 }
 
+#product1 .pro a{
+    text-decoration: none;
+}
+
 #product1 .pro img{
     width: 100%;
     border-radius: 15px;
